--- a/src/pages/care-plan/su-goals/su-goals.html
+++ b/src/pages/care-plan/su-goals/su-goals.html
@@ -59,6 +59,9 @@
 
     <guuey-notify
       id="dateNotify"
+      f-name="[[suBasicInfo.fName]]"
+      l-name="[[suBasicInfo.lName]]"
+      image="[[suBasicInfo.image]]"
       home="[[home]]"
       notify-route="homes/[[home]]/patients/[[patient]]/personalGoals/[[goalId]]/finishDate"
       notify-target="[[goalId]]"
