--- a/src/pages/care-plan/su-medication/su-medication.html
+++ b/src/pages/care-plan/su-medication/su-medication.html
@@ -39,6 +39,9 @@
 
     <guuey-notify
       id="dailyMedNotify"
+      f-name="[[suBasicInfo.fName]]"
+      l-name="[[suBasicInfo.lName]]"
+      image="[[suBasicInfo.image]]"
       immediate
       home="[[home]]"
       times-route="homes/[[home]]/patients/[[patient]]/medicationOutline/timeChunks"
