--- a/src/my-app-dependencies.html
+++ b/src/my-app-dependencies.html
@@ -30,15 +30,17 @@
 <link rel="import" href="../bower_components/paper-button/paper-button.html" />
 <link rel="import" href="../bower_components/neon-animation/neon-animated-pages.html" />
 <link rel="import" href="../bower_components/paper-tabs/paper-tabs.html" />
+<link rel="import" href="../bower_components/paper-dialog-scrollable/paper-dialog-scrollable.html" />
 
 <link rel="import" href="elements/admin-drawer/admin-drawer.html" />
 <link rel="import" href="elements/firebase-storage/firebase-storage.html" />
 <link rel="import" href="elements/guuey-bug-report/guuey-bug-report.html" />
 <link rel="import" href="elements/media-queries/media-queries.html" />
+<link rel="import" href="elements/guuey-notification/guuey-notification.html" />
+
 <link rel="import" href="behaviors/shell-resize-behavior.html" />
 
 <link rel="import" href="styles/app-shell-styles.html" />
 
 <link rel="import" href="icons/custom-icons.html" />
-
-<link rel="import" href="pages/test/test-test/other-element.html" />
+<link rel="import" href="icons/module-icons.html" />
