--- a/src/styles/app-shell-styles.html
+++ b/src/styles/app-shell-styles.html
@@ -371,6 +371,61 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       --iron-icon-height:40px;
       --iron-icon-width:40px;
     }
+    #appsDialog{
+      min-height:100px;
+      width:350px;
+    }
+    .flexRow{
+      display:flex;
+      flex-direction:row;
+    }
+    .flexRow paper-icon-button{
+      flex-grow:1;
+      --paper-icon-button:{
+        height:100%;
+        width:100%;
+      };
+    }
+    #appsDialog::before{
+      height:20px;
+      width:20px;
+      background-color:#FFFFFF;
+      transform: rotate(45deg);
+      position:absolute;
+      top:-10px;
+      right:calc(50% - 20px);
+      content:" ";
+    }
+    /*
+    #appsDialog::before{
+      width: 0;
+      height: 0;
+      border-left: 20px solid transparent;
+      border-right: 20px solid transparent;
+      border-bottom: 20px solid #FFFFFF;
+      content:"";
+      position:absolute;
+      top:-20px;
+      right:50%;
+    }
+    */
+    #notifyDialog{
+      min-height:100px;
+      width:50%;
+    }
+    /*
+    #notifyDialog::before{
+      width: 0;
+      height: 0;
+      border-left: 20px solid transparent;
+      border-right: 20px solid transparent;
+      border-bottom: 20px solid #FFFFFF;
+      content:"";
+      position:absolute;
+      top:-20px;
+      right:50%;
+    }
+    */
     </style>
   </template>
 </dom-module>
