--- a/src/styles/app-shell-styles.html
+++ b/src/styles/app-shell-styles.html
@@ -294,7 +294,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       color:#FFF;
     }
     #suDrawerImage{
-      width:256px;
+      width:100%;
       height:168px;
     }
     #neonPages{
