updated ad-profile to use rectangle config for guuey-photo-editor

--- a/src/pages/admin/ad-profile/ad-profile.html
+++ b/src/pages/admin/ad-profile/ad-profile.html
@@ -80,6 +80,7 @@
           </iron-image>
 
           <guuey-photo-editor
+            rectangle
             class="imageButton"
             value="{{homePhoto}}">
           </guuey-photo-editor>
